# pytranspleet

./: .eslintrc.js  .gitignore  README.md  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  tox.ini
backend/separator/: api.py
backend/utils/: audio.py  filesystem.py
public/: index.html  manifest.json
pytranspleet/: __main__.py
server/: __main__.py
server/separator/: api.py
server/transcriber/: api.py
src/: __main__.py  main.py  utils.py
src/backend/: server.py
src/backend/transcriber/: api.py
src/backend/utils/: filesystem.py
src/frontend/: App.jsx  App.tsx  AudioPlayer.tsx  FileHolder.tsx  index.css  index.tsx
src/frontend/hooks/: useWavesurferStore.tsx
src/frontend/models/: File.tsx
tests/: test_demucs.py  test_open_gui.py  test_pick_file.py  test_play_audio.py  test_transcriber.py
